Fixed tag vertical spacing issue

--- a/assets/less/content/tags.less
+++ b/assets/less/content/tags.less
@@ -1,4 +1,5 @@
 .tags {
+    align-content: space-between;
     padding: 10px 0;
     .tag {
         background-color: darken(@node_green_dark, 4);
@@ -7,6 +8,7 @@
         color: white;
         cursor: pointer;
         font-size: 1rem;
+        line-height: 2rem;
         padding: 3px 12px 6px 12px;
     }
     .tag:hover {
